--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,17 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light p-3">
-  <a class="navbar-brand" routerLink="/">PicPay</a>
-  <div class="collapse navbar-collapse">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/users">Usuários</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/payment">Pagamento</a>
-      </li>
-    </ul>
-  </div>
-</nav>
-
-<main class="container mt-4">
-  <router-outlet></router-outlet> <!-- Aqui as páginas vão carregar -->
-</main>
+<div class="container py-4">
+  <h1 class="text-center text-success mb-4">💸 Desafio PicPay</h1>
+  <app-user-list></app-user-list>
+</div>
