--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,4 @@
 <div class="container py-4">
   <h1 class="text-center text-success mb-4">💸 Desafio PicPay</h1>
-  <app-user-list></app-user-list>
+  <router-outlet></router-outlet>
 </div>
